<resources>
    <string name="app_name">W.UP</string>
    <string name="nav_title_card_details">Details</string>

    <!--  Card List Feature  -->
    <string name="card_list_available_title">Available</string>
    <string name="card_list_current_balance_title">Current balance</string>
    <string name="card_list_min_payment_title">Min. payment</string>
    <string name="card_list_due_date_title">Due date</string>
    <string name="card_list_details_button_text">Details</string>

    <!-- Card Detail Feature -->
    <string name="card_detail_current_balance_title">Current balance</string>
    <string name="card_detail_available_title">Available</string>
    <string name="card_detail_reservations_title">Reservations/Pending (sum)</string>
    <string name="card_detail_balance_overview_title">Balance overview</string>
    <string name="card_detail_balance_carried_title">Balance carried over from last statement</string>
    <string name="card_detail_total_spending_title">Total spendings since last statement</string>
    <string name="card_detail_re_payment_title">Your latest re-payment</string>
    <string name="card_detail_account_details_title">Account details</string>
    <string name="card_detail_account_limit_title">Card account limit</string>
    <string name="card_detail_card_account_number_title">Card account number</string>
    <string name="card_detail_main_card_title">Main card</string>
    <string name="card_detail_main_card_number_title">Card number</string>
    <string name="card_detail_main_card_holder_name_title">Card holder name</string>
    <string name="card_detail_supplementary_card_title">Supplementary card</string>
    <string name="card_detail_supplementary_card_number_title">Card number</string>
    <string name="card_detail_supplementary_card_holder_name_title">Card holder name</string>
</resources>